--- a/estilos/style.css
+++ b/estilos/style.css
@@ -66,3 +66,22 @@ section#redesociais{
 text-align: right;
 
 }
+
+div.C1 {
+
+background-color: black;
+margin: 0px -20px 30px 20px;
+padding: 10px;
+position: relative;
+padding-bottom: 59%;
+}
+
+div.C1 > iframe {
+
+position: absolute;
+top: 5%;
+left: 5%;
+width: 90%;
+height: 90%;
+
+}
